tests/errors/flow/return-type-mismatch.fn
---
Description: Function returns a float when declared to return i32
Expected: FN3405
---

type Program
{
    fn Main -> i32
    {
        return 1.0
    }
}
